# BitLadder

./: .gitignore  .gitmodules  README.md  install.sh  requirements.txt  setup.py
benchmark/: bench_flash_attn.py  bench_single_decode.ipynb
bit_decode/: __init__.py  bit_decode_interface.py
bit_decode/models/: cache_utils.py
csrc/bit_decode/: CMakeLists.txt  decode_api.cpp
csrc/bit_decode/src/: bench_single_packdecode.cu  flash_api.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  test_single_packdecode.cu
csrc/bit_decode/src/genfile/: flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_split_hdim128_fp16_sm80_2bit.cu  flash_fwd_split_hdim128_fp16_sm80_4bit.cu  flash_qpack_hdim128_fp16_sm80_2bit.cu  flash_qpack_hdim128_fp16_sm80_4bit.cu
csrc/bit_decode/src/include/: blockscaled_layout.h  dequantize.h  flash.h  kernel_traits.h  softmax.h  utils.h
evaluation/: bench_throughput.py  example.py  llama.py  print.log1  qwen3.py  test.py  test_bit_decode.ipynb
evaluation/scripts/: bench_throughput.sh  example.sh
hopper/: CMakeLists.txt
hopper/src/: bench_single_decode.cu  flash_api.h  flash_fwd_combine_launch_template.h  flash_fwd_launch_template.h  test_single_decode.cu
hopper/src/genfile/: flash_fwd_combine.cu  flash_fwd_hdim128_fp16_split_sm90.cu  flash_qpack_hdim128_fp16_sm80_4bit.cu
hopper/src/include/: block_info.h  dequantize.h  flash.h  flash_fwd_kernel_sm90.h  flash_qpack_kernel.h  kernel_traits.h  mainloop_fwd_sm90_tma_gmma_ws.hpp  named_barrier.hpp  qpack.h  tile_size.h  utils.h
